--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,8 @@ img {
 }
 .heart {
   margin-right: 7px;
+  width: 26px;
+  height: 23px;
 }
 .button {
   max-width: 250px;
@@ -384,6 +386,10 @@ img {
   }
   .info {
     margin-bottom: 39px;
+
+  }
+  .info-text {
+    font-size: 15px;
   }
   .button {
     font-size: 14px;
@@ -497,6 +503,9 @@ img {
     font-size: 16px;
     flex-direction: column;
   }
+  .current-price {
+    margin-right: 28px;
+  }
   .favorite {
     font-size: 0;
   }
@@ -552,5 +561,73 @@ img {
 
   .information {
     margin-bottom: 36px;
+  }
+}
+@media (max-width: 320px) {
+  .header-container,
+  .about-container,
+  .footer-container,
+  .readers-container,
+  .hero-container {
+    max-width: 260px;
+  }
+  .book-image_block {
+    max-width: 263px;
+    margin-bottom: 43px;
+  }
+  .sale-price {
+    font-size: 8px;
+    padding: 6px 10px;
+  }
+  .author {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
+  .title {
+    font-size: 24px;
+    margin-bottom: 11px;
+  }
+  .subtitle {
+    font-size: 18px;
+    margin-bottom: 35px;
+  }
+  .info {
+    font-size: 14px;
+  }
+  .current-price {
+    font-size: 36px;
+  }
+  .button {
+    max-width: 262px;
+    min-width: 90%;
+  }
+  .hero-section {
+    margin-bottom: 60px;
+  }
+  .about-container {
+    padding-top: 60px;
+  }
+  .section-title {
+    margin-bottom: 35px;
+    font-size: 24px;
+  }
+  .reader:nth-child(6) {
+    display: none;
+  }
+
+  .reader:nth-child(5) {
+    display: none;
+  }
+  .readers-photo {
+    justify-content: space-around;
+  }
+  .reader {
+    margin-bottom: 20px;
+  }
+  .requisites {
+    margin-right: 22px;
+  }
+  .information {
+    margin-right: 18px;
   }
 }
